[tool.poetry]
name = "async-app"
version = "0.1.0"
description = ""
authors = ["Nicolas Garza <nicolas.garza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
